@startuml Reviews Controller Diagram

class ReviewsController {
  +constructor(reviewsService: ReviewsService)
  +create(createReviewDto: CreateReviewDto, req: any): any
}

class ReviewsService {
  +constructor(reviewRepository: Repository<ReviewEntity>, postRepository: Repository<PostEntity>)
  +create(createReviewDto: CreateReviewDto, user: any): any
}

class ReviewEntity {
  +id: number
  +rating: number
  +comment: string
  +createdAt: Date
  +userId: number
  +postId: number
  +user: UserEntity
  +post: PostEntity
}

class PostEntity {
  +id: number
  +title: string
  +description: string
  +price: number
  +area: number
  +address: string
  +latitude: number
  +longitude: number
  +rejectionReason: string
  +resubmittedAt: Date
  +max_occupancy: number
  +status: PostStatus
  +createdAt: Date
  +updatedAt: Date
  +userId: number
  +categoryId: number
  +user: UserEntity
  +category: CategoryEntity
  +images: PostImageEntity[]
  +amenities: AmenityEntity[]
  +reviews: ReviewEntity[]
}

class UserEntity {
  +id: number
  +email: string
  +username: string
  +password_hash: string
  +roleId: number
  +is_active: boolean
  +createdAt: Date
  +updatedAt: Date
  +role: RoleEntity
  +profile: UserProfileEntity
  +posts: PostEntity[]
}

' Relationships
ReviewsController --> ReviewsService : uses
ReviewsService --> ReviewEntity : manages
ReviewsService --> PostEntity : manages
ReviewsService --> UserEntity : manages

@enduml
